FISH-1321 Fixes WeServices12 Test Suite failures